Wed Sep 13 17:32:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* c_localaddr.c (krb5_crypto_os_localaddr): Clear the buffer
		before calling the SIOCGIFCONF ioctl.  This makes purify
		happy.

Thu Sep  7 12:00:00 1995  James Mattly <mattly@fusion.com>
	
	* Renamed ustime.c to c_ustime.c
	* Renamed localaddr.c to c_localaddr.c because Mac can't have
	  two files with the same name.
	* Makefile.in, .Sanitize updated for the above change.

Thu Aug 24 18:40:48 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Sat Jul 29 03:17:21 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* localaddr.c (krb5_crypto_os_localaddr): Don't bash the return
		from SIOCGIFCONF with the output of a SIOCGIFFLAGS.  Duh.

Wed Jul 19 17:17:54 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* localaddr.c: also add definition of max if it's not there.

	* localaddr.c: fix definition of ifreq_size so it actually works

Mon Jul 17 16:04:00 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* localaddr.c (krb5_crypto_os_localaddr): Deal with variable sized
        ifreq structures if sockaddr contains sa_len field.

	* configure.in: Check to see if struct sockaddr has sa_len.

Thu Jul  6 17:13:11 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* localaddr.c: migrated from lib/krb5/os

	* ustime.c: migrated from lib/krb5/os; removed context variable
		from arglist.

	* Makefile.in: don't copy or remove localaddr.c and ustime.c;
		they're local now.

Fri Jun  9 19:18:41 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu May 25 22:16:35 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Sat Mar 25 15:38:23 1995  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (memmove.c): memmove.c is in krb5/posix, not krb5/os.
